# crabbe

./: Makefile
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  interrupts.rs  io.rs  main.rs  memory.rs  shell.rs  vga_buffer.rs
kernel/src/task/: mod.rs  simple_executor.rs
src/impl/kernel/: Cargo.toml  main.rs
src/impl/kernel/src/: gdt.rs  interrupts.rs  main.rs  memory.rs  vga_buffer.rs
src/impl/x86_64/: header.asm  main.asm
src/impl/x86_64/boot/: main64.asm
src/x86_64/: main64.asm
targets/x86_64/: linker.ld
targets/x86_64/iso/boot/grub/: grub.cfg
