[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
name = "kernel"
path = "src/main.rs"
[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard="0.5.0"
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
#[[bin]]
#name = "kernel"
#path = "main.rs"
